--- a/index.html
+++ b/index.html
@@ -2,9 +2,35 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon-16x16.svg" sizes="16x16" />
+    <link rel="icon" type="image/svg+xml" href="/favicon-32x32.svg" sizes="32x32" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.svg" />
+    <link rel="manifest" href="/site.webmanifest" />
+
+    <!-- Meta tags -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <meta name="description" content="Michael Tolulope Olagunju - Full-Stack Developer specializing in web and mobile applications, fintech solutions, and modern technologies." />
+    <meta name="keywords" content="Full-Stack Developer, React, Node.js, JavaScript, TypeScript, Web Development, Mobile Development, Software Engineer" />
+    <meta name="author" content="Michael Tolulope Olagunju" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://tolulope.dev/" />
+    <meta property="og:title" content="Michael Tolulope Olagunju - Full-Stack Developer" />
+    <meta property="og:description" content="Experienced software developer skilled in building web and mobile applications, managing websites, and delivering tailored software solutions." />
+    <meta property="og:image" content="/apple-touch-icon.svg" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://x.com/tolulope_dev/" />
+    <meta property="twitter:title" content="Michael Tolulope Olagunju - Full-Stack Developer" />
+    <meta property="twitter:description" content="Experienced software developer skilled in building web and mobile applications, managing websites, and delivering tailored software solutions." />
+    <meta property="twitter:image" content="/apple-touch-icon.svg" />
+
+    <title>Michael Tolulope Olagunju - Full-Stack Developer</title>
   </head>
   <body>
     <div id="root"></div>
